package(default_visibility = ["//visibility:public"])

load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test", "cc_binary")

cc_library(
    name = "subspace_c_client",
    srcs = [
        "subspace.cc",
    ],
    hdrs = [
        "subspace.h",
    ],
    deps = [
        "//client:subspace_client",
    ],
)

cc_test(
    name = "client_test",
    size = "small",
    srcs = ["client_test.cc"],
    data = [
        "//server:subspace_server",
    ],
    deps = [
        ":subspace_c_client",
        "//server",
        "@abseil-cpp//absl/flags:flag",
        "@abseil-cpp//absl/flags:parse",
        "@abseil-cpp//absl/hash:hash_testing",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@googletest//:gtest_main",
        "@coroutines//:co",
    ],
)

cc_binary(
    name = "subspace_c_client.so",
    srcs = [
        "subspace.cc",
        "subspace.h",
    ],
    linkshared = True,
    deps = [
        "//client:subspace_client",
    ],
)
