package(default_visibility = ["//visibility:public"])

cc_library(
    name = "subspace_client",
    srcs = [
        "client.cc",
        "client_channel.cc",
        "message.cc",
        "publisher.cc",
        "subscriber.cc",
    ],
    hdrs = [
        "client.h",
        "client_channel.h",
        "message.h",
        "options.h",
        "publisher.h",
        "subscriber.h",
    ],
    strip_include_prefix = ".",
    include_prefix = "subspace/client",
    deps = [
        "//common:subspace_common",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/container:flat_hash_set",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings:str_format",
        "@coroutines//co",
    ],
)

cc_test(
    name = "client_test",
    size = "small",
    srcs = ["client_test.cc"],
    data = [
        "//server:subspace_server",
        "//plugins:nop_plugin.so",
    ],
    deps = [
        ":subspace_client",
        "//server",
        "@com_google_absl//absl/debugging:failure_signal_handler",
        "@com_google_absl//absl/debugging:symbolize",
        "@com_google_absl//absl/flags:flag",
        "@com_google_absl//absl/flags:parse",
        "@com_google_absl//absl/hash:hash_testing",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:status_matchers",
        "@com_google_absl//absl/status:statusor",
        "@com_google_googletest//:gtest",
        "@coroutines//co",
    ],
)

cc_test(
    name = "latency_test",
    size = "small",
    srcs = ["latency_test.cc"],
    data = [
        "//server:subspace_server",
    ],
    deps = [
        ":subspace_client",
        "//server",
        "@com_google_absl//absl/flags:flag",
        "@com_google_absl//absl/flags:parse",
        "@com_google_absl//absl/hash:hash_testing",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:status_matchers",
        "@com_google_absl//absl/status:statusor",
        "@com_google_googletest//:gtest",
        "@coroutines//co",
    ],
)

cc_test(
    name = "stress_test",
    size = "large",
    srcs = ["stress_test.cc"],
    data = [
        "//server:subspace_server",
    ],
    deps = [
        ":subspace_client",
        "//server",
        "@com_google_absl//absl/flags:flag",
        "@com_google_absl//absl/flags:parse",
        "@com_google_absl//absl/hash:hash_testing",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:status_matchers",
        "@com_google_absl//absl/status:statusor",
        "@com_google_googletest//:gtest",
        "@coroutines//co",
    ],
)

cc_test(
    name = "bridge_test",
    srcs = ["bridge_test.cc"],
    data = [
        "//server:subspace_server",
    ],
    deps = [
        ":subspace_client",
        "//server",
        "@com_google_absl//absl/flags:flag",
        "@com_google_absl//absl/flags:parse",
        "@com_google_absl//absl/hash:hash_testing",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:status_matchers",
        "@com_google_absl//absl/status:statusor",
        "@com_google_googletest//:gtest",
        "@coroutines//co",
    ],
)
