package(default_visibility = ["//visibility:public"])

load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

cc_library(
    name = "subspace_client",
    srcs = [
        "client.cc",
        "client_channel.cc",
        "message.cc",
        "publisher.cc",
        "subscriber.cc",
        "checksum.cc",
        "arm_crc32.S",
    ],
    hdrs = [
        "client.h",
        "client_channel.h",
        "message.h",
        "options.h",
        "publisher.h",
        "subscriber.h",
        "checksum.h",
    ],
    strip_include_prefix = ".",
    include_prefix = "subspace/client",
    deps = [
        "//common:subspace_common",
        "@abseil-cpp//absl/container:flat_hash_map",
        "@abseil-cpp//absl/container:flat_hash_set",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings:str_format",
        "@abseil-cpp//absl/types:span",
        "@coroutines//co",
   ],
)

cc_test(
    name = "client_test",
    size = "small",
    srcs = ["client_test.cc"],
    data = [
        "//server:subspace_server",
        "//plugins:nop_plugin.so",
    ],
    deps = [
        ":subspace_client",
        "//server",
        "@abseil-cpp//absl/debugging:failure_signal_handler",
        "@abseil-cpp//absl/debugging:symbolize",
        "@abseil-cpp//absl/flags:flag",
        "@abseil-cpp//absl/flags:parse",
        "@abseil-cpp//absl/hash:hash_testing",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:status_matchers",
        "@abseil-cpp//absl/status:statusor",
        "@googletest//:gtest",
        "@coroutines//:co",
    ],
)

cc_test(
    name = "latency_test",
    size = "small",
    srcs = ["latency_test.cc"],
    data = [
        "//server:subspace_server",
    ],
    deps = [
        ":subspace_client",
        "//server",
        "@abseil-cpp//absl/flags:flag",
        "@abseil-cpp//absl/flags:parse",
        "@abseil-cpp//absl/hash:hash_testing",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:status_matchers",
        "@abseil-cpp//absl/status:statusor",
        "@googletest//:gtest",
        "@coroutines//:co",
    ],
)

cc_test(
    name = "stress_test",
    size = "large",
    srcs = ["stress_test.cc"],
    data = [
        "//server:subspace_server",
    ],
    deps = [
        ":subspace_client",
        "//server",
        "@abseil-cpp//absl/flags:flag",
        "@abseil-cpp//absl/flags:parse",
        "@abseil-cpp//absl/hash:hash_testing",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:status_matchers",
        "@abseil-cpp//absl/status:statusor",
        "@googletest//:gtest",
        "@coroutines//:co",
    ],
)

cc_test(
    name = "bridge_test",
    srcs = ["bridge_test.cc"],
    data = [
        "//server:subspace_server",
    ],
    deps = [
        ":subspace_client",
        "//server",
        "@abseil-cpp//absl/flags:flag",
        "@abseil-cpp//absl/flags:parse",
        "@abseil-cpp//absl/hash:hash_testing",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:status_matchers",
        "@abseil-cpp//absl/status:statusor",
        "@googletest//:gtest",
        "@coroutines//:co",
    ],
)
