package(default_visibility = ["//visibility:public"])

cc_library(
    name = "subspace_common",
    srcs = [
        "channel.cc",
    ],
    hdrs = [
        "atomic_bitset.h",
        "channel.h",
        "fast_ring_buffer.h",
    ],
    linkopts = select({
        "//:macos_x86_64": [],
        "//:macos_arm64": [],
        "//:macos_default": [],
        "//conditions:default": ["-lrt"],
    }),
    deps = [
        "//proto:subspace_cc_proto",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/strings:str_format",
        "@com_google_protobuf//:protobuf",
        "@coroutines//co:co",
        "@toolbelt//toolbelt",
    ],
)

cc_test(
    name = "common_test",
    size = "small",
    srcs = [
        "atomic_bitset.h",
        "common_test.cc",
        "fast_ring_buffer.h",
    ],
    deps = [
        "@com_google_absl//absl/container:flat_hash_set",
        "@com_google_googletest//:gtest_main",
    ],
)
