package(default_visibility = ["//visibility:public"])

cc_library(
    name = "subspace_common",
    srcs = [
        "channel.cc",
    ],
    hdrs = [
        "atomic_bitset.h",
        "channel.h",
        "fast_ring_buffer.h",
    ],
    linkopts = select({
        "//:macos_x86_64": [],
        "//:macos_arm64": [],
        "//:macos_default": [],
        "//conditions:default": ["-lrt"],
    }),
    deps = [
        "//proto:subspace_cc_proto",
        "@abseil-cpp//absl/container:flat_hash_map",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/strings:str_format",
        "@protobuf//:protobuf",
        "@coroutines//:co",
        "@toolbelt//toolbelt",
    ],
)

cc_test(
    name = "common_test",
    size = "small",
    srcs = [
        "atomic_bitset.h",
        "common_test.cc",
        "fast_ring_buffer.h",
    ],
    deps = [
        "@abseil-cpp//absl/container:flat_hash_set",
        "@googletest//:gtest_main",
    ],
)
