package(default_visibility = ["//visibility:public"])

load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

cc_library(
    name = "subspace_common",
    srcs = [
        "channel.cc",
        "split_buffer.cc",
        "system_info.cc",
        "syscall_shim.cc",
    ],
    hdrs = [
        "atomic_bitset.h",
        "channel.h",
        "client_buffer.h",
        "fast_ring_buffer.h",
        "split_buffer.h",
        "system_info.h",
        "syscall_shim.h",
        "syscall_shim_test_helper.h",
    ],
    linkopts = select({
        "//:macos_x86_64": [],
        "//:macos_arm64": [],
        "//:macos_default": [],
        "//:android": ["-llog"],
        "//:qnx": [],
        "//conditions:default": ["-lrt"],
    }),
    deps = [
        "//proto:subspace_cc_proto",
        "@abseil-cpp//absl/container:flat_hash_map",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/strings:str_format",
        "@protobuf//:protobuf",
        "@coroutines//:co",
        "@cpp_toolbelt//toolbelt",
    ],
)

cc_test(
    name = "common_test",
    size = "small",
    srcs = [
        "atomic_bitset.h",
        "common_test.cc",
        "fast_ring_buffer.h",
    ],
    deps = [
        "@abseil-cpp//absl/container:flat_hash_set",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "split_buffer_test",
    size = "small",
    srcs = ["split_buffer_test.cc"],
    deps = [
        ":subspace_common",
        "@googletest//:gtest_main",
    ],
)
