package(default_visibility = ["//visibility:public"])

load("@rules_cc//cc:defs.bzl", "cc_binary")

cc_binary(
    name = "pub",
    srcs = [
        "pub.cc",
    ],
    deps = [
        "//client:subspace_client",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings:str_format",
        "@abseil-cpp//absl/flags:flag",
        "@abseil-cpp//absl/flags:parse",
 
    ],
    linkopts = select({
        "//:macos_x86_64": [],
        "//:macos_arm64": [],
        "//:macos_default": [],
        "//conditions:default": [ "-lrt" ],
    }),
)



cc_binary(
    name = "sub",
    srcs = [
        "sub.cc",
    ],
    deps = [
        "//client:subspace_client",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings:str_format",
        "@abseil-cpp//absl/flags:flag",
        "@abseil-cpp//absl/flags:parse",
    ],
    linkopts = select({
        "//:macos_x86_64": [],
        "//:macos_arm64": [],
        "//:macos_default": [],
        "//conditions:default": [ "-lrt" ],
    }),
)


cc_binary(
    name = "perf_subspace_sub",
    srcs = [
        "perf_subspace_sub.cc",
    ],
    deps = [
        "//client:subspace_client",
        "//common:subspace_common",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings:str_format",
        "@abseil-cpp//absl/flags:flag",
        "@abseil-cpp//absl/flags:parse",
    ],
    linkopts = select({
        "//:macos_x86_64": [],
        "//:macos_arm64": [],
        "//:macos_default": [],
        "//conditions:default": [ "-lrt" ],
    }),
)

cc_binary(
    name = "perf_subspace_pub",
    srcs = [
        "perf_subspace_pub.cc",
    ],
    deps = [
        "//client:subspace_client",
        "//common:subspace_common",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings:str_format",
        "@abseil-cpp//absl/flags:flag",
        "@abseil-cpp//absl/flags:parse",
    ],
    linkopts = select({
        "//:macos_x86_64": [],
        "//:macos_arm64": [],
        "//:macos_default": [],
        "//conditions:default": [ "-lrt" ],
    }),
)

cc_binary(
    name = "perf_tcp_recv",
    srcs = [
        "perf_tcp_recv.cc",
    ],
    deps = [
        "//common:subspace_common",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings:str_format",
        "@abseil-cpp//absl/flags:flag",
        "@abseil-cpp//absl/flags:parse",
    ],
    linkopts = select({
        "//:macos_x86_64": [],
        "//:macos_arm64": [],
        "//:macos_default": [],
        "//conditions:default": [ "-lrt" ],
    }),
)

cc_binary(
    name = "perf_tcp_send",
    srcs = [
        "perf_tcp_send.cc",
    ],
    deps = [
        "//common:subspace_common",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings:str_format",
        "@abseil-cpp//absl/flags:flag",
        "@abseil-cpp//absl/flags:parse",
    ],
    linkopts = select({
        "//:macos_x86_64": [],
        "//:macos_arm64": [],
        "//:macos_default": [],
        "//conditions:default": [ "-lrt" ],
    }),
)

cc_binary(
    name = "perf_subspace",
    srcs = [
        "perf_subspace.cc",
    ],
    deps = [
        "//client:subspace_client",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings:str_format",
        "@abseil-cpp//absl/flags:flag",
        "@abseil-cpp//absl/flags:parse",
        "@coroutines//co:co",
    ],
    linkopts = select({
        "//:macos_x86_64": [],
        "//:macos_arm64": [],
        "//:macos_default": [],
        "//conditions:default": [ "-lrt" ],
    }),
)
