package(default_visibility = ["//visibility:public"])

load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")

cc_binary(
    name = "nop_plugin.so",
    srcs = ["nop_plugin.cc"],
    deps = [
        "//client:subspace_client",
        "//server:server",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/strings:str_format",
    ],
    linkstatic = False,
    linkshared = True,
)

cc_binary(
    name = "split_buffer_free_test_plugin.so",
    srcs = ["split_buffer_free_test_plugin.cc"],
    deps = [
        "//server:server",
        "@abseil-cpp//absl/status",
    ],
    linkstatic = False,
    linkshared = True,
)

# Static library version of the NOP plugin for linking directly into binaries.
# On macOS, dlopen'd plugins get their own copy of thread-local variables
# (like co::self), breaking the coroutine scheduler.  Linking the plugin
# statically avoids that by keeping a single copy of the coroutines library.
cc_library(
    name = "nop_plugin_lib",
    srcs = ["nop_plugin.cc"],
    deps = [
        "//client:subspace_client",
        "//server:server",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/strings:str_format",
    ],
    alwayslink = True,
)
